Fix page overflow

--- a/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-simple-components/swop-simple-pagination.scss
+++ b/app/assets/stylesheets/swop/swop-themes/swop-simple/swop-simple-components/swop-simple-pagination.scss
@@ -1,6 +1,7 @@
 #sidescroll + .row {
   @extend .gy-0;
   @extend .justify-content-center;
+  width: 100%;
 
   *[class*="col"] {
     flex: 0 0 auto;
